--- a/final-project/src/main/resources/static/login.css
+++ b/final-project/src/main/resources/static/login.css
@@ -8,9 +8,8 @@ login-body {
     margin: 0;
 }
 
-
 .login-body{
-    background: url("./img/drums.jpg");
+    background: url("./img/drums-2178425_960_720.jpg");
     background-size: cover;
     background-position: center;
     display: flex;
