--- a/final-project/src/main/resources/static/view-OnePlaylist.css
+++ b/final-project/src/main/resources/static/view-OnePlaylist.css
@@ -8,7 +8,7 @@ html {
 body {
     height: 100%;
     margin: 0px;
-    background: url("./img/login-pic-2.jpg");
+    background: url("./img/login-pic_720.jpg");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
