--- a/final-project/src/main/resources/static/view-shows.css
+++ b/final-project/src/main/resources/static/view-shows.css
@@ -4,7 +4,7 @@ html {
 }
 
 .view-shows-body {
-    background: url("./img/guitar-amp-3.jpg");
+    background: url("./img/guitar-amp_720.jpg");
 
     background-size: cover;
     background-position: center;
@@ -29,6 +29,14 @@ html {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+}
+
+nav {
+    width: 100%;
+}
+
+.tagNames {
+    display: flex;
 }
 
 .allShows{
@@ -122,6 +130,7 @@ display: flex;
     flex-direction: row;
     color: white;
     text-align: center;
+    justify-content: space-between;
 }
 .tags a{
     color:white;
@@ -194,5 +203,12 @@ display: flex;
     color: white;
     border-radius: 5px;
     padding: 15%;
+}
+
+.logout {
+    border: none;
+    background: none;
+    color: white;
+    cursor: pointer;
 }
 
