--- a/final-project/src/main/resources/templates/song-queue.html
+++ b/final-project/src/main/resources/templates/song-queue.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8"/>
     <title>Title</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous"/>
+    <link  rel="stylesheet" th:href="@{/user-view-show.css}"/>
 </head>
 <body>
-<h1> song queue </h1>
-<table class="table table-hover table-inverse">
+<div class="show-info">
+    <h1 th:text="${showLocation}"></h1>
+    <h1 th:text="${showAddress}"></h1>
+</div>
+<table id="song-table" class="table table-hover table-inverse">
     <thead>
     <tr>
-        <th>original Artist</th>
-        <th> song name</th>
-        <th> genre </th>
+        <th id="artist">Original Artist</th>
+        <th id="song"> Song Name</th>
+        <th id="genre"> Genre </th>
+
     </tr>
     </thead>
     <div th:each="songs: ${songs}">
