--- a/final-project/src/main/resources/templates/user-view-show.html
+++ b/final-project/src/main/resources/templates/user-view-show.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8"/>
     <title>Title</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous"/>
+    <link  rel="stylesheet" th:href="@{/user-view-show.css}"/>
 </head>
 <body>
-<h1>user viewing an Artist's show</h1>
-<table class="table table-hover table-inverse">
+<div class="show-info">
+    <h1 th:text="${showLocation}"></h1>
+    <h1 th:text="${showAddress}"></h1>
+</div>
+
+<table id="song-table" class="table table-hover table-inverse">
     <thead>
     <tr>
-        <th>original Artist</th>
-        <th> song name</th>
-        <th> genre </th>
-        <th>add song to queue</th>
+        <th id="artist">Original Artist</th>
+        <th id="song"> Song Name</th>
+        <th id="genre"> Genre </th>
+        <th id="add-song">Add Song To Queue</th>
     </tr>
     </thead>
     <div th:each="songs: ${showSongs}">
@@ -24,7 +29,7 @@
                 <td  th:text="${songs.songName}"> </td>
                 <td th:text="${songs.genre}" ></td>
                 <td>
-        <button type="submit" > add to que </button>
+        <button type="submit" > add to queue </button>
                 </td>
             </tr>
             </tbody>
