--- a/final-project/src/main/resources/static/live-show.css
+++ b/final-project/src/main/resources/static/live-show.css
@@ -53,3 +53,19 @@ h1 {
     border-color: white;
     color: white;
 }
+
+.end-show-form {
+    display: flex;
+    justify-content: center;
+}
+
+.end-show {
+    border-color: white;
+    color: white;
+    background: rgb(250, 106, 95);
+    width: 95%;
+    height: 50%;
+    padding: 3%;
+    margin: 2% 0%;
+    font-size: 150%;
+}
