--- a/final-project/src/main/resources/templates/live-show.html
+++ b/final-project/src/main/resources/templates/live-show.html
@@ -31,11 +31,11 @@
             </table>
         </div>
 
-        <div class="queue-container" th:if="${currentShow.songQueue} == null">
+        <div class="queue-container" th:if="${currentShow.songQueue} == null or ${#lists.isEmpty(queueSongs)}">
             <h2>Song Queue</h2>
             <p class="no-songs">There Are Currently No Songs In The Queue</p>
         </div>
-        <div class="queue-table queue-container" th:if="${currentShow.songQueue} != null">
+        <div class="queue-table queue-container" th:if="${currentShow.songQueue} != null and ${! #lists.isEmpty(queueSongs)} ">
             <h2>Song Queue</h2>
             <table class="table">
                 <thead>
@@ -64,5 +64,8 @@
         </div>
 
     </div>
+    <form class="end-show-form" th:action="@{'/api/' + ${showId} + '/end-show'}" th:method="post">
+        <button class="end-show btn btn-outline-dark" type="submit">End Show</button>
+    </form>
 </body>
 </html>
