--- a/final-project/src/main/resources/templates/live-show.html
+++ b/final-project/src/main/resources/templates/live-show.html
@@ -7,7 +7,11 @@
     <link  rel="stylesheet" th:href="@{/live-show.css}"/>
 </head>
 <body>
-    <h1 class="venue" th:text="${currentShow.locationName}"></h1>
+    <div class="header">
+        <h1 class="venue" th:text="${currentShow.locationName}"></h1>
+        <h2 class="h2" th:text="${date}"></h2>
+        <h2 class="h2" th:text="${startTime} + ' - ' + ${endTime}"></h2>
+    </div>
     <div class="table-container">
         <div class="playlist-container">
             <h2>Playlist</h2>
