added date on view shows

--- a/final-project/src/main/resources/static/view-shows.css
+++ b/final-project/src/main/resources/static/view-shows.css
@@ -99,6 +99,11 @@ display: flex;
     margin-bottom: 0px;
 }
 
+.time {
+    font-size: 80%;
+    margin-bottom: 0px;
+}
+
 .show-info-address {
     font-size: 80%;
     margin-bottom: 0px;
